--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Stellar</h1>
-						<p>Just another free, EDITED BY ALI fully EDITED AGAIN responsive site template<br />
+						<p>Just another free, EDITED BY ALI fully EDITED AND AGAIN LOOOL AGAIN responsive site template<br />
 						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
