--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
           <h2>Ali Mohammadian</h2>
           <dl class="alt">
             <dt>Address</dt>
-            <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+            <dd>Virginia Tech; USA</dd>
             <dt>Phone</dt>
-            <dd>(000) 000-0000 x 0000</dd>
+            <dd>571-328-9646</dd>
             <dt>Email</dt>
             <dd><a href="#">alim2vt@vt.edu</a></dd>
           </dl>
